# java2pyi

./: .gitignore  Cargo.toml  README.md
java-ast-parser/: Cargo.toml  build.rs
java-ast-parser/src/: ast.rs  java.lalrpop  lexer.rs  lib.rs
src/: index_table.rs  index_tree.rs  main.rs  preprocess.rs  pyi.rs
