[workspace]
members = ["java-ast-parser"]

[package]
name = "java2pyi"
version = "0.1.1"
edition = "2024"
license = "MIT"
keywords = ["java", "ast", "parser", "codegen"]
categories = ["command-line-utilities"]
description = "Java source to Python stubs for mypy/pyright"
repository = "https://github.com/n08i40k/java2pyi"
readme = "README.md"

exclude = ["java-ast-parser/**"]

[dependencies]
java-ast-parser = { version = "0.1.0", path = "java-ast-parser" }
lalrpop-util = "0.22.2"
orx-tree = "2.2.0"
log = "0.4.29"
env_logger = "0.11.8"
